--- a/charts/containerum/requirements.yaml
+++ b/charts/containerum/requirements.yaml
@@ -7,7 +7,7 @@ dependencies:
       - postgresql
       - platform
   - name: mongodb
-    version: "3.0.6"
+    version: "3.0.7"
     repository: https://charts.containerum.io
     tags:
       - db
@@ -21,7 +21,7 @@ dependencies:
       - gateway
       - platform
   - name: user-manager
-    version: "v1.0.5"
+    version: "v1.0.6-rc.1"
     repository: https://charts.containerum.io
     tags:
       - back
