--- a/charts/containerum/values.yaml
+++ b/charts/containerum/values.yaml
@@ -115,14 +115,14 @@ resource:
     platformdb: true
   env:
     global:
-      CH_RESOURCE_MONGO_DB: containerum
-      CH_RESOURCE_MONGO_LOGIN: mongo
-      CH_RESOURCE_MIN_SERVICE_PORT: 30000
-      CH_RESOURCE_MAX_SERVICE_PORT: 32767
+      MONGO_DB: containerum
+      MONGO_LOGIN: mongo
+      MIN_SERVICE_PORT: 30000
+      MAX_SERVICE_PORT: 32767
     local:
-      CH_RESOURCE_MONGO_ADDR: null
-      CH_RESOURCE_KUBE_API_ADDR: null
-      CH_RESOURCE_PERMISSIONS_ADDR: null
+      MONGO_ADDR: null
+      KUBE_API_ADDR: null
+      PERMISSIONS_ADDR: null
 
 nodemetrics:
   env:
