update kube-events, add containerum to EXCLUDED_NS

--- a/charts/containerum/values.yaml
+++ b/charts/containerum/values.yaml
@@ -155,7 +155,7 @@ kube-importer:
     serviceAccountName: release-name
   env:
     global:
-      EXCLUDED_NS: "default,kube-system"
+      EXCLUDED_NS: "default,kube-system,containerum"
     local:
       RESOURCE_URL: null
       PERMISSIONS_URL: null
